--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.0",
     "karma-mocha-reporter": "^2.0.0",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-remap-istanbul": "^0.6.0",
     "karma-sourcemap-loader": "^0.3.0",
     "karma-webpack": "^2.0.0",
